# MEDS_Tabular_AutoML

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  conftest.py  mkdocs.yml  pyproject.toml  xgboost_sweep.py
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  publish-to-pypi.yml  tests.yaml
MIMICIV_TUTORIAL/: README.MD  tabularize_meds.sh  task_tabularize_meds.sh
MIMICIV_TUTORIAL/tasks/los/in_hospital/: first_48h.yaml
MIMICIV_TUTORIAL/tasks/los/in_icu/: first_48h.yaml
MIMICIV_TUTORIAL/tasks/mortality/: README.md
MIMICIV_TUTORIAL/tasks/mortality/in_hospital/: first_24h.yaml  first_48h.yaml
MIMICIV_TUTORIAL/tasks/mortality/post_hospital_discharge/: 1y.yaml  30d.yaml
MIMICIV_TUTORIAL/tasks/readmission/: 30d.yaml
cli/: describe_codes.sh  profile_tabularization.sh  tabularization.sh  task_specific_caching.sh  xgboost.sh
configs/: base_config.yaml  default.yaml  describe_codes.yaml  launch_xgboost.yaml  tabularization.yaml  tabularize.yaml  tabularize_sweep.yaml  task_specific_caching.yaml  xgboost.yaml  xgboost_sweep.yaml
configs/bk/: xgboost.yaml
configs/tabularization/: default.yaml
docs/: README.MD  gen_ref_pages.py  generate.sh  implementation.md  overview.md  prediction.md  profiling.md  requirements.txt  terminology.md  usage_guide.md
docs/javascripts/: directory-tree.js
docs/source/: api.rst  computational-performance.rst  conf.py  implementation.md  implementation.rst  index.md  index.rst  installation.md  installation.rst  overview.md  overview.rst  prediction.md  profiling.md  usage.rst  xgboost-performance.rst
docs/source/_static/: switcher.json
docs/stylesheets/: directory-tree.css
hf_cohort/: aces_task.sh  aces_task_extraction.py  cohort.yaml  config.yaml  hf_cohort_cli.sh  hf_cohort_e2e.sh  hf_cohort_shard.sh  task.yaml  xgboost.sh
scripts/: e2e.sh  hf_cohort_e2e.sh  hf_cohort_shard.sh  identify_columns.py  launch_xgboost.py  summarize_over_windows.py  tabularize_merge.py  tabularize_static.py  tabularize_ts.py  task_specific_caching.py  xgboost.py  xgboost_sweep.py
src/MEDS_tabular_automl/: __init__.py  __main__.py  base_model.py  dense_iterator.py  describe_codes.py  evaluation_callback.py  file_name.py  generate_static_features.py  generate_summarized_reps.py  generate_ts_features.py  mapper.py  sklearn_model.py  tabular_dataset.py  tabularize.py  utils.py  xgboost_model.py
src/MEDS_tabular_automl/configs/: default.yaml  describe_codes.yaml  launch_autogluon.yaml  launch_basemodel.yaml  launch_model.yaml  launch_sklearnmodel.yaml  launch_xgboost.yaml  tabularization.yaml  task_specific_caching.yaml  tmp.yaml.yaml
src/MEDS_tabular_automl/configs/hydra/callbacks/: evaluation_callback.yaml
src/MEDS_tabular_automl/configs/imputer/: median_imputer.yaml
src/MEDS_tabular_automl/configs/model/: knn_classifier.yaml  logistic_regression.yaml  random_forest_classifier.yaml  sgd_classifier.yaml  xgboost.yaml
src/MEDS_tabular_automl/configs/model_launcher/: autogluon.yaml  default.yaml  knn_classifier.yaml  logistic_regression.yaml  random_forest_classifier.yaml  sgd_classifier.yaml  xgboost.yaml
src/MEDS_tabular_automl/configs/model_launcher/data_loading_params/: default.yaml
src/MEDS_tabular_automl/configs/model_launcher/data_processing_params/: default.yaml
src/MEDS_tabular_automl/configs/model_launcher/data_processing_params/imputer/: default.yaml  mean_imputer.yaml  mode_imputer.yaml
src/MEDS_tabular_automl/configs/model_launcher/data_processing_params/normalization/: default.yaml  standard_scaler.yaml
src/MEDS_tabular_automl/configs/model_launcher/hydra/sweeper/: default.yaml
src/MEDS_tabular_automl/configs/model_launcher/path/: default.yaml
src/MEDS_tabular_automl/configs/model_launcher/training_params/: default.yaml
src/MEDS_tabular_automl/configs/models/: sgd_classifier.yaml  xgboost.yaml
src/MEDS_tabular_automl/configs/normalization/: max_abs_scaler.yaml  min_max_scaler.yaml
src/MEDS_tabular_automl/configs/tabularization/: default.yaml
src/MEDS_tabular_automl/scripts/: cache_task.py  describe_codes.py  generate_optuna_intervals.py  generate_permutations.py  generate_subsets.py  hf_subtype.code-workspace  launch_autogluon.py  launch_basemodel.py  launch_model.py  launch_sklearnmodel.py  launch_xgboost.py  sweep_xgboost.py  tabularize_static.py  tabularize_time_series.py
tests/: cli_bk.py  cli_test.py  test_configs.py  test_integration.py  test_tabularize.py  test_tabularize_task.py
